# meica-python

./: .gitignore  README.md  example.py  pyproject.toml
cli/: cli.py
config/: hypervar.yaml  qwen-image-edit.yaml  train_step.yaml  trainer.yaml
config/example/: hypervar.yaml  train_step.yaml
config/qwen-image-edit/: train_step.yaml  trainer.yaml
dataset/: __init__.py  binary_compact_dataset.py  preprocessor.py
diffusion/: diffusion_transformer_trainer.py
diffusionkit/: __init__.py  diffusion_transformer_trainer.py  encode_latent.py  encode_prompt.py
example/: finetune_qwen_image_edit.py  i2i_dataset.py  test_dist_dataset.py
meica/: __init__.py
tests/: test_checkpoint.py  test_instantiate.py  test_loss_accumulator.py
trainer/: __init__.py  batch_util.py  instantiate.py  loss_accumulator.py  progress.py  progress_tracker.py  trainer.py  type_inference.py
trainer/tests/: test_instantiate.py  test_trainer.py
